home template adding of all projets of my portfolio

--- a/app/views/blog/home.html.twig
+++ b/app/views/blog/home.html.twig
@@ -143,67 +143,7 @@
         <div class="row gx-5 align-items-center justify-content-center">
           <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
             <div class="content-skewed content-skewed-right">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-portfolio.png" alt="..."/>
-            </div>
-          </div>
-          <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
-            <div class="mb-5 text-light">
-              <h2 class="text-info">ASI-BAT</h2>
-              <p class="lead">When you purchase this UI Kit, you get access to a robust suite of powerful tools and components to help you build your next landing page quickly and easily.</p>
-            </div>
-            <div class="row gx-5">
-              <div class="col-md-6 mb-4">
-                <h6 class="text-info">Landing Pages</h6>
-                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
-                <a class="small text-arrow-icon" href="#!">
-                  Learn More
-                  <i data-feather="arrow-right"></i>
-                </a>
-              </div>
-              <!-- Ajoutez d'autres éléments au besoin -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="bg-light py-10 text-dark">
-      <!-- Le contenu de votre deuxième diapositive -->
-      <div class="container px-5">
-        <div class="row gx-5 align-items-center justify-content-center">
-          <div class="col-md-9 col-lg-6 order-0 order-lg-1 mb-5" data-aos="fade-left">
-            <div class="content-skewed content-skewed-left">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-portfolio.png" alt="..."/>
-            </div>
-          </div>
-          <div class="col-lg-6 order-1 order-lg-0 mb-5 mb-lg-0" data-aos="fade-right">
-            <div class="mb-5 text-dark">
-              <h2 class="text-info">LES BATISSEURS</h2>
-              <p class="lead">When you purchase this UI Kit, you get access to a robust suite of powerful tools and components to help you build your next landing page quickly and easily.</p>
-            </div>
-            <div class="row gx-5">
-              <div class="col-md-6 mb-4">
-                <h6 class="text-info">Landing Pages</h6>
-                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
-                <a class="small text-arrow-icon" href="#!">
-                  Learn More
-                  <i data-feather="arrow-right"></i>
-                </a>
-              </div>
-              <!-- Ajoutez d'autres éléments au besoin -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="bg-dark py-10 text-light">
-      <!-- Le contenu de votre première diapositive -->
-      <div class="container px-5">
-        <div class="row gx-5 align-items-center justify-content-center">
-          <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
-            <div class="content-skewed content-skewed-right">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-portfolio.png" alt="..."/>
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/admin-dashboard-descktop-mobile.jpg" alt="Adjoukou-AGBELOU blog"/>
             </div>
           </div>
           <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
@@ -233,7 +173,67 @@
         <div class="row gx-5 align-items-center justify-content-center">
           <div class="col-md-9 col-lg-6 order-0 order-lg-1 mb-5" data-aos="fade-left">
             <div class="content-skewed content-skewed-left">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-portfolio.png" alt="..."/>
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/LBA-descktop-mobile.jpg" alt="les Bâtisseurs"/>
+            </div>
+          </div>
+          <div class="col-lg-6 order-1 order-lg-0 mb-5 mb-lg-0" data-aos="fade-right">
+            <div class="mb-5 text-dark">
+              <h2 class="text-info">LES BÂTISSEURS SAS</h2>
+              <p class="lead">When you purchase this UI Kit, you get access to a robust suite of powerful tools and components to help you build your next landing page quickly and easily.</p>
+            </div>
+            <div class="row gx-5">
+              <div class="col-md-6 mb-4">
+                <h6 class="text-info">Landing Pages</h6>
+                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
+                <a class="small text-arrow-icon" href="#!">
+                  Learn More
+                  <i data-feather="arrow-right"></i>
+                </a>
+              </div>
+              <!-- Ajoutez d'autres éléments au besoin -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+    <section class="bg-dark py-10 text-light">
+      <!-- Le contenu de votre première diapositive -->
+      <div class="container px-5">
+        <div class="row gx-5 align-items-center justify-content-center">
+          <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
+            <div class="content-skewed content-skewed-right">
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/asi-bat-descktop-mobile.jpg" alt="asi-bat"/>
+            </div>
+          </div>
+          <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
+            <div class="mb-5 text-light">
+              <h2 class="text-info">ASI-BAT</h2>
+              <p class="lead">When you purchase this UI Kit, you get access to a robust suite of powerful tools and components to help you build your next landing page quickly and easily.</p>
+            </div>
+            <div class="row gx-5">
+              <div class="col-md-6 mb-4">
+                <h6 class="text-info">Landing Pages</h6>
+                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
+                <a class="small text-arrow-icon" href="#!">
+                  Learn More
+                  <i data-feather="arrow-right"></i>
+                </a>
+              </div>
+              <!-- Ajoutez d'autres éléments au besoin -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-light py-10 text-dark">
+      <!-- Le contenu de votre deuxième diapositive -->
+      <div class="container px-5">
+        <div class="row gx-5 align-items-center justify-content-center">
+          <div class="col-md-9 col-lg-6 order-0 order-lg-1 mb-5" data-aos="fade-left">
+            <div class="content-skewed content-skewed-left">
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/mon-blog-descktop-mobile.jpg" alt="Adjoukou-AGBELOU blog"/>
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-0 mb-5 mb-lg-0" data-aos="fade-right">
@@ -263,7 +263,7 @@
         <div class="row gx-5 align-items-center justify-content-center">
           <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
             <div class="content-skewed content-skewed-right">
-              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="https://assets.startbootstrap.com/img/screenshots-product-pages/sb-ui-kit-pro/landing-portfolio.png" alt="..."/>
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/coming-soon-lba-descktop-mobile.jpg" alt="Coming-soon"/>
             </div>
           </div>
           <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
@@ -287,6 +287,125 @@
       </div>
     </section>
 
+    <section class="bg-light py-10 text-dark">
+      <!-- Le contenu de votre deuxième diapositive -->
+      <div class="container px-5">
+        <div class="row gx-5 align-items-center justify-content-center">
+          <div class="col-md-9 col-lg-6 order-0 order-lg-1 mb-5" data-aos="fade-left">
+            <div class="content-skewed content-skewed-left">
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/Chalet-Caviar-desktop-mobile.jpg" alt="Location de Chalets"/>
+            </div>
+          </div>
+          <div class="col-lg-6 order-1 order-lg-0 mb-5 mb-lg-0" data-aos="fade-right">
+            <div class="mb-5 text-dark">
+              <h2 class="text-info">Chalet Et Caviar</h2>
+              <p class="lead">When you purchase this UI Kit, you get access to a robust suite of powerful tools and components to help you build your next landing page quickly and easily.</p>
+            </div>
+            <div class="row gx-5">
+              <div class="col-md-6 mb-4">
+                <h6 class="text-info">Landing Pages</h6>
+                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
+                <a class="small text-arrow-icon" href="#!">
+                  Learn More
+                  <i data-feather="arrow-right"></i>
+                </a>
+              </div>
+              <!-- Ajoutez d'autres éléments au besoin -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-dark py-10 text-light">
+      <!-- Le contenu de votre première diapositive -->
+      <div class="container px-5">
+        <div class="row gx-5 align-items-center justify-content-center">
+          <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
+            <div class="content-skewed content-skewed-right">
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/LesFilms-PleinAire-Desktop-mobile.jpg" alt="Les films de plein air"/>
+            </div>
+          </div>
+          <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
+            <div class="mb-5 text-light">
+              <h2 class="text-info">Les Films De Plein Air</h2>
+              <p class="lead">When you purchase this UI Kit, you get access to a robust suite of powerful tools and components to help you build your next landing page quickly and easily.</p>
+            </div>
+            <div class="row gx-5">
+              <div class="col-md-6 mb-4">
+                <h6 class="text-info">Landing Pages</h6>
+                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
+                <a class="small text-arrow-icon" href="#!">
+                  Learn More
+                  <i data-feather="arrow-right"></i>
+                </a>
+              </div>
+              <!-- Ajoutez d'autres éléments au besoin -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-light py-10 text-dark">
+      <!-- Le contenu de votre deuxième diapositive -->
+      <div class="container px-5">
+        <div class="row gx-5 align-items-center justify-content-center">
+          <div class="col-md-9 col-lg-6 order-0 order-lg-1 mb-5" data-aos="fade-left">
+            <div class="content-skewed content-skewed-left">
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/myma-chocolat-descktop-mobile.jpg" alt="Myma Chocolat"/>
+            </div>
+          </div>
+          <div class="col-lg-6 order-1 order-lg-0 mb-5 mb-lg-0" data-aos="fade-right">
+            <div class="mb-5 text-dark">
+              <h2 class="text-info">MymaChocolat Site Vitrine</h2>
+              <p class="lead">When you purchase this UI Kit, you get access to a robust suite of powerful tools and components to help you build your next landing page quickly and easily.</p>
+            </div>
+            <div class="row gx-5">
+              <div class="col-md-6 mb-4">
+                <h6 class="text-info">Landing Pages</h6>
+                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
+                <a class="small text-arrow-icon" href="#!">
+                  Learn More
+                  <i data-feather="arrow-right"></i>
+                </a>
+              </div>
+              <!-- Ajoutez d'autres éléments au besoin -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-dark py-10 text-light">
+      <!-- Le contenu de votre première diapositive -->
+      <div class="container px-5">
+        <div class="row gx-5 align-items-center justify-content-center">
+          <div class="col-md-9 col-lg-6 order-1 order-lg-0" data-aos="fade-right">
+            <div class="content-skewed content-skewed-right">
+              <img class="content-skewed-item img-fluid shadow-lg rounded-3" src="/../mon-blog/public/assets/img/portfolio-Img/myma-chocolat-dashbord-descktop-mobile.jpg" alt="Myma Chocolat Espace Admin"/>
+            </div>
+          </div>
+          <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
+            <div class="mb-5 text-light">
+              <h2 class="text-info">MymaChocolat Espace Admin</h2>
+              <p class="lead">When you purchase this UI Kit, you get access to a robust suite of powerful tools and components to help you build your next landing page quickly and easily.</p>
+            </div>
+            <div class="row gx-5">
+              <div class="col-md-6 mb-4">
+                <h6 class="text-info">Landing Pages</h6>
+                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
+                <a class="small text-arrow-icon" href="#!">
+                  Learn More
+                  <i data-feather="arrow-right"></i>
+                </a>
+              </div>
+              <!-- Ajoutez d'autres éléments au besoin -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 <!-- Répétez le schéma pour les sections suivantes -->
 
 
