login link to footer

--- a/app/views/templates/blogLayout.html.twig
+++ b/app/views/templates/blogLayout.html.twig
@@ -112,8 +112,11 @@
                   <li class="mb-2 nav-item">
                     <a class="{% if page == 'posts' %}active{% endif %}" href="/../mon-blog/posts/{{ 1 }}">Articles</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="mb-2 nav-item">
                     <a class="{% if page == 'contact' %}active{% endif %}" href="/../mon-blog/contact">Contact</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="{% if page == 'login' %}active{% endif %}" href="/../mon-blog/login">Se connecter</a>
                   </li>
                 </ul>
               </div>
