--- a/app/views/templates/adminLayout.html.twig
+++ b/app/views/templates/adminLayout.html.twig
@@ -16,70 +16,69 @@
       <link href="https://cdn.jsdelivr.net/npm/easymde@2.18.0/dist/easymde.min.css" rel="stylesheet">
     </head>
   {% endblock %}
-
   <body class="nav-fixed">
     {% block body %}
       {% block nav %}
-      <nav class="topnav navbar navbar-expand shadow justify-content-between justify-content-sm-start navbar-light bg-white" id="sidenavAccordion">
-        <!-- Sidenav Toggle Button-->
-        <button class="btn btn-icon btn-transparent-dark order-1 order-lg-0 me-2 ms-lg-2 me-lg-0" id="sidebarToggle">
-          <i data-feather="menu"></i>
-        </button>
-        <!-- Navbar Brand-->
-        <!-- * * Tip * * You can use text or an image for your navbar brand.-->
-        <!-- * * * * * * When using an image, we recommend the SVG format.-->
-        <!-- * * * * * * Dimensions: Maximum height: 32px, maximum width: 240px-->
-        <a class="navbar-brand pe-3 ps-4 ps-lg-2" href="/../mon-blog/adminDashboard">Espace Admin</a>
-        <!-- Navbar Items-->
-        <ul class="navbar-nav align-items-center ms-auto">
-          <!-- Navbar Search Dropdown-->
-          <!-- * * Note: * * Visible only below the lg breakpoint-->
-          <li class="nav-item dropdown no-caret me-3 d-lg-none">
-            <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="searchDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i data-feather="search"></i>
-            </a>
-            <!-- Dropdown - Search-->
-            <div class="dropdown-menu dropdown-menu-end p-3 shadow animated--fade-in-up" aria-labelledby="searchDropdown">
-              <form class="form-inline me-auto w-100">
-                <div class="input-group input-group-joined input-group-solid">
-                  <input class="form-control pe-0" type="text" placeholder="Recherche" aria-label="Recherche" aria-describedby="basic-addon2"/>
-                  <div class="input-group-text">
-                    <i data-feather="search"></i>
+        <nav class="topnav navbar navbar-expand shadow justify-content-between justify-content-sm-start navbar-light bg-white" id="sidenavAccordion">
+          <!-- Sidenav Toggle Button-->
+          <button class="btn btn-icon btn-transparent-dark order-1 order-lg-0 me-2 ms-lg-2 me-lg-0" id="sidebarToggle">
+            <i data-feather="menu"></i>
+          </button>
+          <!-- Navbar Brand-->
+          <!-- * * Tip * * You can use text or an image for your navbar brand.-->
+          <!-- * * * * * * When using an image, we recommend the SVG format.-->
+          <!-- * * * * * * Dimensions: Maximum height: 32px, maximum width: 240px-->
+          <a class="navbar-brand pe-3 ps-4 ps-lg-2" href="/../mon-blog/adminDashboard">Espace Admin</a>
+          <!-- Navbar Items-->
+          <ul class="navbar-nav align-items-center ms-auto">
+            <!-- Navbar Search Dropdown-->
+            <!-- * * Note: * * Visible only below the lg breakpoint-->
+            <li class="nav-item dropdown no-caret me-3 d-lg-none">
+              <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="searchDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i data-feather="search"></i>
+              </a>
+              <!-- Dropdown - Search-->
+              <div class="dropdown-menu dropdown-menu-end p-3 shadow animated--fade-in-up" aria-labelledby="searchDropdown">
+                <form class="form-inline me-auto w-100">
+                  <div class="input-group input-group-joined input-group-solid">
+                    <input class="form-control pe-0" type="text" placeholder="Recherche" aria-label="Recherche" aria-describedby="basic-addon2"/>
+                    <div class="input-group-text">
+                      <i data-feather="search"></i>
+                    </div>
                   </div>
-                </div>
-              </form>
-            </div>
-          </li>
-          <!-- User Dropdown-->
-          <li class="nav-item dropdown no-caret dropdown-user me-3 me-lg-4">
-            <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownUserImage" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="img-fluid" src="/../mon-blog/public/assets/img/illustrations/profiles/profile-1.png"/></a>
-            <div class="dropdown-menu dropdown-menu-end border-0 shadow animated--fade-in-up" aria-labelledby="navbarDropdownUserImage">
-              {% if user is defined and user is not null %}
-                <h6 class="dropdown-header d-flex align-items-center">
-                  <img class="dropdown-user-img" src="/../mon-blog/public/assets/img/illustrations/profiles/profile-1.png"/>
-                  <div class="dropdown-user-details">
-                    <div class="dropdown-user-details-name">{{ user.userName }}</div>
-                    <div class="dropdown-user-details-email">{{ user.email }}</div>
-                  </div>
-                </h6>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/../mon-blog/adminDashboard/admin-profile">
-                  <div class="dropdown-item-icon">
-                    <i data-feather="settings"></i>
-                  </div>
-                  Profile
-                </a>
-                <a class="dropdown-item" href="/../mon-blog/logout">
-                  <div class="dropdown-item-icon">
-                    <i data-feather="log-out"></i>
-                  </div>
-                  Déconexion
-                </a>
-              {% endif %}
-            </div>
-          </li>
-        </ul>
-      </nav>
+                </form>
+              </div>
+            </li>
+            <!-- User Dropdown-->
+            <li class="nav-item dropdown no-caret dropdown-user me-3 me-lg-4">
+              <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownUserImage" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="img-fluid" src="/../mon-blog/public/assets/img/illustrations/profiles/profile-1.png"/></a>
+              <div class="dropdown-menu dropdown-menu-end border-0 shadow animated--fade-in-up" aria-labelledby="navbarDropdownUserImage">
+                {% if user is defined and user is not null %}
+                  <h6 class="dropdown-header d-flex align-items-center">
+                    <img class="dropdown-user-img" src="/../mon-blog/public/assets/img/illustrations/profiles/profile-1.png"/>
+                    <div class="dropdown-user-details">
+                      <div class="dropdown-user-details-name">{{ user.userName }}</div>
+                      <div class="dropdown-user-details-email">{{ user.email }}</div>
+                    </div>
+                  </h6>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="/../mon-blog/adminDashboard/admin-profile">
+                    <div class="dropdown-item-icon">
+                      <i data-feather="settings"></i>
+                    </div>
+                    Profile
+                  </a>
+                  <a class="dropdown-item" href="/../mon-blog/logout">
+                    <div class="dropdown-item-icon">
+                      <i data-feather="log-out"></i>
+                    </div>
+                    Déconexion
+                  </a>
+                {% endif %}
+              </div>
+            </li>
+          </ul>
+        </nav>
       {% endblock %}
       <div id="layoutSidenav">
         <div id="layoutSidenav_nav">
@@ -157,7 +156,8 @@
                 <div class="sidenav-footer-content">
                   {% if user is defined and user is not null %}
                     <div class="sidenav-footer-subtitle">Vous êtes connecté en tant que :</div>
-                    <div class="sidenav-footer-title">Admin  {{ user.userName }}</div>
+                    <div class="sidenav-footer-title">Admin
+                      {{ user.userName }}</div>
                   {% endif %}
                 </div>
               </div>
@@ -193,7 +193,7 @@
                     </div>
                   {% endblock %}
                 </header>
-                <!-- Main page content-->
+                <!-- Main page content -->
                 {% block mainPageContent %}{% endblock %}
               {% endblock %}
             </main>
@@ -224,5 +224,4 @@
         {% endblock %}
       {% endblock %}
     </body>
-
   </html>
