--- a/app/views/templates/adminLayout.html.twig
+++ b/app/views/templates/adminLayout.html.twig
@@ -5,8 +5,8 @@
       <meta charset="utf-8"/>
       <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-      <meta name="description" content=""/>
-      <meta name="author" content=""/>
+      <meta name="description" content="Développeur Concepteur D'Application PHP/SYMFONY Adjoukou AGBELOU"/>
+      <meta name="author" content="Développeur Full Satck Adjoukou AGBELOU"/>
       <title>Adjoukou Dashboard</title>
       <link href="/../mon-blog/public/css/adminStyles.css" rel="stylesheet"/>
       <link rel="icon" type="image/x-icon" href="/../mon-blog/public/assets/img/logo.png"/>
