--- a/app/views/templates/blogLayout.html.twig
+++ b/app/views/templates/blogLayout.html.twig
@@ -5,10 +5,9 @@
     <head>
       <meta charset="utf-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-      <meta name="description" content=""/>
-      <meta name="author" content=""/>
+      <meta name="description" content="Développeur Concepteur D'Application PHP/SYMFONY Adjoukou AGBELOU"/>
+      <meta name="author" content="Développeur Full Satck Adjoukou AGBELOU"/>
       <title>Adjoukou AGBELOU Blog</title>
-      <!-- Favicon-->
       <link rel="icon" type="image/x-icon" href="/../mon-blog/public/assets/img/logo.png"/>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
       <!-- font awesome icon-->
@@ -30,7 +29,6 @@
         <main>
         {% block main %}
           <!-- Navbar-->            
-          <!-- nav container -->
           {% block navContainer %}
             <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-dark fixed-top">
               <div class="container px-5">
